--- a/.gitignore
+++ b/.gitignore
@@ -1,4 +1,3 @@
-target/
 !.mvn/wrapper/maven-wrapper.jar
 !**/src/main/**/target/
 !**/src/test/**/target/
@@ -37,3 +36,5 @@ build/
 ### Mac OS ###
 .DS_Store
 .idea/
+target/classes/
+target/test-classes/
