--- a/pom.xml
+++ b/pom.xml
@@ -10,11 +10,10 @@
 
     <name>SeleniumDemoProject</name>
 
-    <properties>
-        <project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
-        <maven.compiler.source>17</maven.compiler.source>
-        <maven.compiler.target>17</maven.compiler.target>
-    </properties>
+   <properties>
+  	<maven.compiler.release>17</maven.compiler.release>
+  	<lombok.version>1.18.34</lombok.version>
+</properties>
 
     <dependencies>
         <!-- https://mvnrepository.com/artifact/org.testng/testng -->
@@ -63,6 +62,12 @@
             <artifactId>image-comparison</artifactId>
             <version>4.4.0</version>
         </dependency>
+	    <dependency>
+    <groupId>org.projectlombok</groupId>
+    <artifactId>lombok</artifactId>
+    <version>${lombok.version}</version>
+    <scope>provided</scope>
+  </dependency>
     </dependencies>
     <build>
         <pluginManagement>
